; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_scope.c_scope_notify_cgroup_empty_event.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_scope.c_scope_notify_cgroup_empty_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"cgroup is empty\00", align 1
@SCOPE_RUNNING = common dso_local global i32 0, align 4
@SCOPE_ABANDONED = common dso_local global i32 0, align 4
@SCOPE_STOP_SIGTERM = common dso_local global i32 0, align 4
@SCOPE_STOP_SIGKILL = common dso_local global i32 0, align 4
@SCOPE_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @scope_notify_cgroup_empty_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scope_notify_cgroup_empty_event(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.TYPE_4__* @SCOPE(i32* %4)
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @assert(i32* %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @log_unit_debug(i32* %8, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @SCOPE_RUNNING, align 4
  %14 = load i32, i32* @SCOPE_ABANDONED, align 4
  %15 = load i32, i32* @SCOPE_STOP_SIGTERM, align 4
  %16 = load i32, i32* @SCOPE_STOP_SIGKILL, align 4
  %17 = call i64 @IN_SET(i32 %12, i32 %13, i32 %14, i32 %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %1
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = load i32, i32* @SCOPE_SUCCESS, align 4
  %22 = call i32 @scope_enter_dead(%struct.TYPE_4__* %20, i32 %21)
  br label %23

23:                                               ; preds = %19, %1
  ret void
}

declare dso_local %struct.TYPE_4__* @SCOPE(i32*) #1

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @log_unit_debug(i32*, i8*) #1

declare dso_local i64 @IN_SET(i32, i32, i32, i32, i32) #1

declare dso_local i32 @scope_enter_dead(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
